# flaccid

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONFIG.md  FLACCID CLI Toolkit Developer Handbook.md  IMPROVEMENTS.md  MIGRATION.md  README.md  export-shazam-web.js  maintenance.sh  mylist.txt  pyproject.toml  realtooklkit.md  requirements.txt  settings.toml  setup.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
archive/: apple_api.py  chart_script.py  cli_interface.py  config_manager.py  csv_to_songshift_txt.py  discogs_api.py  flac_tagger.py  metadata_manager.py  metadata_priority_matrix.csv  musicbrainz_api.py  plugin_base.py  qobuz_api.py  script.py  script_2.py  script_3.py  script_4.py  script_5.py  test_utils.py
archive/fla_cid/: CHANGELOG.md  IMPROVEMENTS.md  pytest.ini
certs/: localhost.key  localhost.pem
contrib/legacy/: README.md  metadata_mafioso.py
cookies/: cookies_template.txt
docs/: ROADMAP.md  USAGE.md
docs/providers/: QOBUZ.md  TIDAL.md
flaccid/commands/: __init__.py
flaccid/core/: api_config.py  auth.py  downloader.py
flaccid/plugins/: lyrics.py
mcp-server-demo/: pyproject.toml
src/flaccid/: cli.py
tests/: Minimal Focus.json  qobuz_dl.py  test_basic.py  test_cli.py  test_config_cli.py  test_config_manager.py  test_download_db_check.py  test_flaccid_tagging.py  test_get_artist_playlist.py  test_help_footer.py  test_library_scan.py  test_playlist_exporter.py  test_qobuz_config_cli.py  test_qobuz_download_retry.py  test_tag_audit.py  test_tag_fix_artist.py  test_url_autodetect.py  test_utils.py
(+51 files in other folders)
