[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flaccid"
version = "0.1.0"
description = "FLACCID: Modular FLAC CLI toolkit for music download, tagging, and library management"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "FLACCID Contributors" }
]
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "requests>=2.28.0",
  "aiohttp>=3.8.0",
  "mutagen>=1.47.0",
  "dynaconf>=3.1.0",
  "pydantic>=2.0.0",
  "keyring>=24.0.0",
  "SQLAlchemy>=2.0.0",
  "watchdog>=2.1.0",
  "rapidfuzz>=3.9.0",
  "asyncio (>=4.0.0,<5.0.0)",
]

[project.urls]
Homepage = "https://github.com/tagslut/flaccid"
Repository = "https://github.com/tagslut/flaccid"

[project.scripts]
fla = "flaccid.cli:cli"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
include = ["src/flaccid"]
exclude = [
  "tests",
  "docs",
  "docs/archive",
  "contrib",
  "allfiles",
  "archive",
  "src/musictools",
]
reportMissingImports = false
typeCheckingMode = "off"

[tool.uv.workspace]
members = ["mcp-server-demo"]
